--- a/client/app/main/main.scss
+++ b/client/app/main/main.scss
@@ -19,9 +19,13 @@
   color: #F5F5F5;
   text-align: center;
   text-shadow: 0 1px 0 rgba(0, 0, 0, 0.1);
-  background: #4393B9;
+  background: #ab3faf;
 }
 
 .navbar-text {
   margin-left: 15px;
+}
+
+.book-select{
+  width: 40px !important;
 }
